# DigitalTerrainHub

./: .gitignore  Dockerfile  cli.sh  docker-compose.yml  manage.py  package.json  pyproject.toml  requirements.lock.txt  requirements.txt  vite.config.mjs
DTH/: settings.py  urls.py  wsgi.py
Frontend/: apps.py
Frontend/static_src/: package.json  vite.config.mjs
PyODM/: enums.py  urls.py  views.py
Users/: forms.py  urls.py  views.py
app/: .env.example  manage.py
app/Config/: asgi.py  settings.py  urls.py  wsgi.py
app/Core/: apps.py  eventstream.py  middleware.py  mixins.py  models.py  serializers.py  sse.py  urls.py  views.py
app/DTH/: asgi.py  settings.py
app/MapViewer/: apps.py
app/Payment/: apps.py  urls.py  views.py
app/PyODM/: apps.py  eventstream.py  forms.py  models.py  serializers.py  signals.py  sse.py  urls.py  views.py
app/User/: apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
app/Users/: urls.py
assets/: manifest.json
assets/django-assets/: test-DVnL9Gru.css
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/Core/: apps.py  middleware.py  models.py  sse.py  urls.py  views.py
backend/DTH/: mixins.py  settings.py  urls.py  views.py
backend/MapViewer/: urls.py
backend/Payment/: apps.py  views.py
backend/PyODM/: admin.py  apps.py  enums.py  models.py  serializers.py  (+3 more)
frontend/: Dockerfile  astro.config.mjs  astro.config.ts  cypress.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vitest.config.ts
templates/: base.html  login.html  register.html
(+558 files in other folders)
