[project]
name = "digitalterrainhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "binaryornot==0.4.4",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "django==5.2",
    "django-browser-reload==1.18.0",
    "django-cotton>=2.1.1",
    "django-environ>=0.12.0",
    "django-eventstream>=5.3.2",
    "django-htmx==1.23.0",
    "django-tailwind==4.0.1",
    "django-template-partials>=24.4",
    "django-tus>=0.5.0",
    "django-vite==3.1.0",
    "django-widget-tweaks==1.5.0",
    "dotenv==0.9.9",
    "heroicons[django]>=2.11.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pillow==11.2.1",
    "pygments==2.19.1",
    "pyodm==1.5.12",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-magic-bin>=0.4.14",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "types-python-dateutil==2.9.0.20241206",
    "tzdata==2025.2",
    "urllib3==2.3.0",
]
